welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var i = 0
^Poucet:3: error: expected class or object definition
do {
^